--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "source": [
     "import numpy as np\r\n",
     "import pandas as pd\r\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "source": [
     "trending_US_df = pd.read_csv('datasets/US_youtube_trending_data.csv')"
    ],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "source": [
     "trending_US_df.info()"
    ],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "source": [
     "trending_US_df.isnull().any()"
    ],
@@ -184,7 +184,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 64
+     "execution_count": 4
     }
    ],
    "metadata": {}
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "source": [
     "\r\n",
     "trending_US_count_df_maxViews = trending_US_df.sort_values('view_count', ascending=False).drop_duplicates(['video_id'])\r\n",
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "source": [
     "trending_US_count_df.isnull().any()"
    ],
@@ -263,7 +263,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 66
+     "execution_count": 6
     }
    ],
    "metadata": {}
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "source": [
     "trending_US_count_df['categoryId'].unique()"
    ],
@@ -301,14 +301,21 @@
       ]
      },
      "metadata": {},
-     "execution_count": 67
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Since all values are valid, we can move on."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "source": [
     "trending_US_count_0725 = trending_US_count_df[(trending_US_count_df)[\"trending_date\"] == \"2021-07-25T00:00:00Z\"]\r\n",
     "trending_US_count_0625 = trending_US_count_df[(trending_US_count_df)[\"trending_date\"] == \"2021-06-25T00:00:00Z\"]"
@@ -325,11 +332,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "source": [
     "trending_US_count_0725_df = trending_US_count_0725['categoryId'].value_counts()\r\n",
-    "trending_US_count_0725_df\r\n",
-    "\r\n",
+    "trending_US_count_0725_df"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "20    10\n",
+       "17     6\n",
+       "24     6\n",
+       "23     4\n",
+       "1      2\n",
+       "2      2\n",
+       "22     2\n",
+       "19     1\n",
+       "28     1\n",
+       "Name: categoryId, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
     "trending_US_count_0625_df = trending_US_count_0625['categoryId'].value_counts()\r\n",
     "trending_US_count_0625_df"
    ],
@@ -356,7 +390,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 69
+     "execution_count": 10
     }
    ],
    "metadata": {}
@@ -441,8 +475,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "We can see from the graph above that category number 10 (Music) has the highest trending count on 07/25/21 with a total of 26 trending videos with that category.\r\n",
-    "on 06/25/21 however, category number 24 (Entertainment) took the highest trending count with a total of 13 trending videos with that category."
+    "We can see from the graph above that category number 20 (Gaming) has the highest trending count on 07/25/21 with a total of 10 trending videos with that category.\r\n",
+    "Similarly on 06/25/21, category number 20 (Gaming) also took the highest trending count with a total of 19 trending videos with that category."
    ],
    "metadata": {}
   },
@@ -1305,7 +1339,7 @@
    "version": "3.8.8"
   },
   "interpreter": {
-   "hash": "96eb50e1d44aed467dc8f759cb08c32fbfa9babcf79c554e2d0e5feb04653a10"
+   "hash": "4c60e8bc5e3a950f13943612a2b13c09042a41eede552724168346706124cf87"
   }
  },
  "nbformat": 4,
