--- a/Untitled0final (1).ipynb
+++ b/Untitled0final (1).ipynb
@@ -3,8 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## The Dataset\n",
-    "The dataset to be utilized for this notebook is called `YouTube Trending Video Dataset`. It contains details for the daily top trending videos in 11 regions, namely: India, USA, Great Britain, Germany, Canada, France, Russia, Brazil, Mexico, South Korea, and, Japan. The data was collected directly through the Youtube API. As the data came from Youtube directly, there should be no sampling error. The US dataset will be primarily used in this study. "
+    "## The Dataset\r\n",
+    "The dataset to be utilized for this notebook is called `YouTube Trending Video Dataset`. It contains details for the daily top trending videos in 11 regions, namely: India, USA, Great Britain, Germany, Canada, France, Russia, Brazil, Mexico, South Korea, and, Japan from August 12 2020 until July 26 2021. The data was collected directly through the Youtube API. As the data came from Youtube directly, there should be no sampling error. The US dataset will be primarily used in this study. "
    ],
    "metadata": {
     "id": "2JCx46SKZMaz"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 59,
    "source": [
     "import numpy as np\r\n",
     "import pandas as pd\r\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "source": [
     "trending_US_df = pd.read_csv('datasets/US_youtube_trending_data.csv')\r\n",
     "trending_US_df.info()"
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "source": [
     "trending_US_df.info()"
    ],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "source": [
     "trending_US_df.isnull().any()"
    ],
@@ -235,7 +235,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 32
+     "execution_count": 62
     }
    ],
    "metadata": {}
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "source": [
     "trending_US_df[\"categoryId\"].unique()"
    ],
@@ -263,7 +263,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 63
     }
    ],
    "metadata": {}
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "source": [
     "trending_US_df.replace({\r\n",
     "1: \"Film & Animation\", 2: \"Autos & Vehicles\", 10: \"Music\",\r\n",
@@ -306,14 +306,41 @@
       ]
      },
      "metadata": {},
-     "execution_count": 34
+     "execution_count": 64
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
+   "source": [
+    "trending_US_df['trending_date'].unique().size"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "335"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 65
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "It was mentioned that the data set contains trending video data from August 8 2020 until July 26 2021 but it is not complete. There are 349 days between those 2 dates but the count above reveals theere being only 335 unique dates meaning there are 14 days not accounted for."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "source": [
     "# trending_US_df[\"trending_date\"].unique()\r\n",
     "trending_US_df['trending_date'].sample(20)"
@@ -323,38 +350,38 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "61150    2021-06-11T00:00:00Z\n",
-       "20255    2020-11-23T00:00:00Z\n",
-       "32339    2021-01-24T00:00:00Z\n",
-       "68928    2021-07-16T00:00:00Z\n",
-       "60798    2021-06-11T00:00:00Z\n",
-       "57827    2021-06-03T00:00:00Z\n",
-       "57342    2021-06-02T00:00:00Z\n",
-       "41711    2021-03-12T00:00:00Z\n",
-       "13293    2020-10-17T00:00:00Z\n",
-       "19055    2020-11-16T00:00:00Z\n",
-       "40850    2021-03-08T00:00:00Z\n",
-       "6440     2020-09-13T00:00:00Z\n",
-       "64725    2021-06-24T00:00:00Z\n",
-       "58031    2021-06-04T00:00:00Z\n",
-       "31176    2021-01-18T00:00:00Z\n",
-       "38873    2021-02-26T00:00:00Z\n",
-       "21114    2020-11-27T00:00:00Z\n",
-       "50715    2021-04-26T00:00:00Z\n",
-       "26001    2020-12-23T00:00:00Z\n",
-       "27292    2020-12-29T00:00:00Z\n",
+       "60121    2021-06-09T00:00:00Z\n",
+       "37263    2021-02-18T00:00:00Z\n",
+       "28800    2021-01-07T00:00:00Z\n",
+       "46986    2021-04-07T00:00:00Z\n",
+       "44958    2021-03-28T00:00:00Z\n",
+       "26006    2020-12-23T00:00:00Z\n",
+       "43505    2021-03-21T00:00:00Z\n",
+       "29455    2021-01-10T00:00:00Z\n",
+       "60998    2021-06-11T00:00:00Z\n",
+       "38872    2021-02-26T00:00:00Z\n",
+       "3520     2020-08-29T00:00:00Z\n",
+       "65339    2021-06-28T00:00:00Z\n",
+       "62766    2021-06-15T00:00:00Z\n",
+       "2254     2020-08-23T00:00:00Z\n",
+       "277      2020-08-13T00:00:00Z\n",
+       "36916    2021-02-16T00:00:00Z\n",
+       "25439    2020-12-20T00:00:00Z\n",
+       "54532    2021-05-15T00:00:00Z\n",
+       "68113    2021-07-12T00:00:00Z\n",
+       "10384    2020-10-02T00:00:00Z\n",
        "Name: trending_date, dtype: object"
       ]
      },
      "metadata": {},
-     "execution_count": 35
+     "execution_count": 66
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "source": [
     "# trending_US_df[\"publishedAt\"].unique()\r\n",
     "trending_US_df[\"publishedAt\"].sample(20)"
@@ -364,31 +391,31 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "19072    2020-11-14T02:18:42Z\n",
-       "23376    2020-12-03T17:30:10Z\n",
-       "44414    2021-03-25T16:00:29Z\n",
-       "34000    2021-02-02T00:00:07Z\n",
-       "41845    2021-03-11T04:44:35Z\n",
-       "41667    2021-03-08T03:54:59Z\n",
-       "53590    2021-05-02T21:35:29Z\n",
-       "50245    2021-04-21T21:58:48Z\n",
-       "12149    2020-10-06T21:33:20Z\n",
-       "33316    2021-01-24T18:05:24Z\n",
-       "19320    2020-11-13T05:00:09Z\n",
-       "60903    2021-06-06T18:03:15Z\n",
-       "53977    2021-05-04T19:00:10Z\n",
-       "65242    2021-06-26T17:05:37Z\n",
-       "10548    2020-09-28T16:52:41Z\n",
-       "30896    2021-01-12T19:01:53Z\n",
-       "17308    2020-11-01T20:00:01Z\n",
-       "44534    2021-03-20T16:42:37Z\n",
-       "46489    2021-04-01T16:00:12Z\n",
-       "19035    2020-11-14T17:28:34Z\n",
+       "42830    2021-03-15T03:43:14Z\n",
+       "27707    2020-12-26T22:00:33Z\n",
+       "38415    2021-02-23T09:00:13Z\n",
+       "13637    2020-10-17T01:00:04Z\n",
+       "14705    2020-10-20T09:00:13Z\n",
+       "12887    2020-10-12T19:01:52Z\n",
+       "16244    2020-11-01T02:58:24Z\n",
+       "37535    2021-02-12T16:58:00Z\n",
+       "17011    2020-11-06T05:00:01Z\n",
+       "32917    2021-01-25T04:53:19Z\n",
+       "42326    2021-03-11T04:44:35Z\n",
+       "14880    2020-10-21T22:04:10Z\n",
+       "34608    2021-02-03T03:14:07Z\n",
+       "69537    2021-07-14T21:06:58Z\n",
+       "16412    2020-11-03T09:00:12Z\n",
+       "17596    2020-10-30T17:59:00Z\n",
+       "66509    2021-06-29T19:25:40Z\n",
+       "24768    2020-12-11T02:22:36Z\n",
+       "59057    2021-06-03T16:46:28Z\n",
+       "14611    2020-10-23T04:00:10Z\n",
        "Name: publishedAt, dtype: object"
       ]
      },
      "metadata": {},
-     "execution_count": 36
+     "execution_count": 67
     }
    ],
    "metadata": {}
@@ -420,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "source": [
     "trending_US_count_df_maxViews = trending_US_df.sort_values('view_count', ascending=False).drop_duplicates(['video_id'])\r\n",
     "trending_US_count_df = trending_US_count_df_maxViews"
@@ -444,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 69,
    "source": [
     "trending_US_count_df = trending_US_df['categoryId'].value_counts()\r\n",
     "trending_US_count_df"
@@ -473,7 +500,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 38
+     "execution_count": 69
     }
    ],
    "metadata": {}
@@ -487,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 70,
    "source": [
     "trending_US_count_df.plot.bar()\r\n",
     "plt.xlabel('CategoryId')\r\n",
@@ -514,43 +541,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "We can see from the graph above that category number Entertainment has the highest trending count with a total of 14454 trending videos in that category with category number Music behind it with a total of 13743 videos. These top 2 categories will be used in the next questions."
+    "We can see from the graph above that category number Entertainment has the highest trending count with a total of 14454 trending videos in that category with category number Music behind it with a total of 13743 videos. **These top 2 categories will be used in the next questions.**"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "**For EDA 2 and 3**, we need to determine the top 2 categories.\r\n"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "source": [
-    "trending_US_df.categoryId.value_counts().head(2)"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Entertainment    14454\n",
-       "Music            13743\n",
-       "Name: categoryId, dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 40
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### 2. Is there a correlation between the number of `likes` and `view_count` of the category 10 (Music) and category 24 (Entertainment)"
+    "### 2. Is there a correlation between the number of `likes` and `view_count` of the categories Music and Entertainment"
    ],
    "metadata": {}
   },
@@ -563,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "source": [
     "# only need video_id ,likes, view_count, category\r\n",
     "dataset_dropped= trending_US_count_df_maxViews.drop([\"title\", \"publishedAt\", \"channelId\", \"channelTitle\", \"trending_date\", \"tags\",\"dislikes\", \"comment_count\", \"thumbnail_link\", \"comments_disabled\", \"ratings_disabled\", \"description\"], axis=1)\r\n",
@@ -592,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "source": [
     "# Create 2 dataframes that correspond to the dataframe of the top 2 categories\r\n",
     "dataset_top2_cat10 = dataset_dropped[dataset_dropped[\"categoryId\"]==\"Music\"]\r\n",
@@ -610,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 73,
    "source": [
     "dataset_top2_cat10 = dataset_top2_cat10.replace({\"Music\": 10}, inplace=False)\r\n",
     "dataset_top2_cat10.corr(method = \"pearson\")"
@@ -674,7 +672,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 43
+     "execution_count": 73
     }
    ],
    "metadata": {}
@@ -688,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 74,
    "source": [
     "plt.scatter(dataset_top2_cat10.view_count, dataset_top2_cat10.likes)\r\n",
     "plt.xlabel('view_count')\r\n",
@@ -713,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 75,
    "source": [
     "dataset_top2_cat24 = dataset_top2_cat24.replace({\"Entertainment\": 24}, inplace=False)\r\n",
     "dataset_top2_cat24.corr(method =\"pearson\")"
@@ -777,7 +775,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 75
     }
    ],
    "metadata": {}
@@ -791,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 76,
    "source": [
     "plt.scatter(dataset_top2_cat24.view_count,dataset_top2_cat24.likes)\r\n",
     "plt.xlabel('view_count')\r\n",
@@ -841,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 77,
    "source": [
     "# take relevant portion of dataframe\r\n",
     "avg_time_to_trend24_df = trending_US_df.loc[(trending_US_df['categoryId'] == \"Entertainment\"), ['video_id', 'categoryId', 'publishedAt', 'trending_date']]\r\n",
@@ -980,14 +978,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 47
+     "execution_count": 77
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 78,
    "source": [
     "# take relevant portion of dataframe\r\n",
     "avg_time_to_trend10_df = trending_US_df.loc[(trending_US_df['categoryId'] == \"Music\"), ['video_id', 'categoryId', 'publishedAt', 'trending_date']]\r\n",
@@ -1126,7 +1124,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 48
+     "execution_count": 78
     }
    ],
    "metadata": {}
@@ -1134,13 +1132,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In order to find the mean amount of days it takes for a video to trend, there is a need to take the time difference of when it a video was first published and when it started trending. For ease of viewing, it will be plotted to a histogram."
+    "In order to find the mean amount of days it takes for a video to trend, there is a need to take the time difference of when the video was first published and when it started trending. For ease of viewing, it will be plotted to a histogram."
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 79,
    "source": [
     "# convert timestamp String to Date and get the difference\r\n",
     "avg_time_to_trend24_df['deltaTime'] = pd.to_datetime(avg_time_to_trend24_df[\"trending_date\"]) - pd.to_datetime(avg_time_to_trend24_df[\"publishedAt\"])\r\n",
@@ -1174,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 80,
    "source": [
     "# convert timestamp String to Date and get the difference\r\n",
     "avg_time_to_trend10_df['deltaTime'] = pd.to_datetime(avg_time_to_trend10_df[\"trending_date\"]) - pd.to_datetime(avg_time_to_trend10_df[\"publishedAt\"])\r\n",
@@ -1215,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 81,
    "source": [
     "# take mean days for a video to trend\r\n",
     "avg_time_to_trend24_df.agg({'deltaDays': [\"mean\", \"median\", \"std\", \"count\"]})"
@@ -1276,14 +1274,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 51
+     "execution_count": 81
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 82,
    "source": [
     "# take mean days for a video to trend\r\n",
     "avg_time_to_trend10_df.agg({'deltaDays': [\"mean\", \"median\", \"std\", \"count\"]})"
@@ -1344,7 +1342,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 52
+     "execution_count": 82
     }
    ],
    "metadata": {}
@@ -1374,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 83,
    "source": [
     "avg_time_to_trend_df = pd.concat([avg_time_to_trend24_df, avg_time_to_trend10_df])\r\n",
     "avg_time_to_trend_df.groupby(\"categoryId\").boxplot(column=\"deltaDays\")\r\n",
@@ -1398,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 84,
    "source": [
     "summary_stat = avg_time_to_trend_df.groupby(\"categoryId\").agg({\"deltaDays\": [\"mean\", \"median\", \"std\", len]})\r\n",
     "summary_stat"
@@ -1475,7 +1473,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 54
+     "execution_count": 84
     }
    ],
    "metadata": {}
@@ -1500,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "source": [
     "ttest_results = ttest_ind(avg_time_to_trend24_df[\"deltaDays\"],\r\n",
     "                  avg_time_to_trend10_df[\"deltaDays\"],\r\n",
@@ -1537,15 +1535,22 @@
   {
    "cell_type": "markdown",
    "source": [
-    "$H_0$ (null hypothesis): There is no difference in the number of trending videos in each category across August 2020 and July 2021?\r\n",
+    "First we construct the hypotheses."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "$H_0$ (null hypothesis): There is no difference in the number of trending videos in each category across August 2020 and July 2021.\r\n",
     "\r\n",
-    "$H_A$ (alternative hypothesis): There is a difference in the number oftrending videos in each category across August 2020 and July 2021?"
+    "$H_A$ (alternative hypothesis): There is a difference in the number oftrending videos in each category across August 2020 and July 2021."
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 86,
    "source": [
     "df_copy = trending_US_df.copy()\r\n",
     "# slice trending_date strings to keep only month and year\r\n",
@@ -1579,14 +1584,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 56
+     "execution_count": 86
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 87,
    "source": [
     "table = pd.DataFrame([\r\n",
     "    counts['2020-09'], counts['2020-10'], counts['2020-11'], counts['2020-12'],\r\n",
@@ -1905,14 +1910,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 57
+     "execution_count": 87
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 88,
    "source": [
     "chi2_contingency(table)"
    ],
@@ -1972,7 +1977,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 58
+     "execution_count": 88
     }
    ],
    "metadata": {}
