--- a/Untitled0final (1).ipynb
+++ b/Untitled0final (1).ipynb
@@ -449,8 +449,8 @@
    "cell_type": "code",
    "execution_count": 68,
    "source": [
-    "trending_US_count_df_maxViews = trending_US_df.sort_values('view_count', ascending=False).drop_duplicates(['video_id'])\r\n",
-    "trending_US_count_df = trending_US_count_df_maxViews"
+    "trending_US_count_df_latest = trending_US_df.sort_values('view_count', ascending=False).drop_duplicates(['video_id'])\r\n",
+    "trending_US_count_df = trending_US_count_df_latest"
    ],
    "outputs": [],
    "metadata": {}
@@ -1371,6 +1371,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "This allows us to see which whether there is a difference in virality between these 2 categories. This information provides a glimpse into how content types could affect the rate at which a video spreads."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 83,
    "source": [
@@ -1529,6 +1536,13 @@
    "cell_type": "markdown",
    "source": [
     "### 2. Is there a difference in the number of trending videos in each category across August 2020 and July 2021?"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "By seeing how the number of videos per category behaves over periods of time, it may give us an idea of how categories can affect the probability of a video trending. Should trends be discovered, it may be utilized by aspiring content creators or in marketing as an effective tool of garnering exposure."
    ],
    "metadata": {}
   },
