--- a/Untitled0final (1).ipynb
+++ b/Untitled0final (1).ipynb
@@ -343,6 +343,7 @@
    "execution_count": 66,
    "source": [
     "# trending_US_df[\"trending_date\"].unique()\r\n",
+    "# checking for format consistency\r\n",
     "trending_US_df['trending_date'].sample(20)"
    ],
    "outputs": [
@@ -384,6 +385,7 @@
    "execution_count": 67,
    "source": [
     "# trending_US_df[\"publishedAt\"].unique()\r\n",
+    "# checking for format consistency\r\n",
     "trending_US_df[\"publishedAt\"].sample(20)"
    ],
    "outputs": [
@@ -1563,6 +1565,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "To continue, we need to take organize the data according to the month it trended in. "
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "source": [
@@ -1600,6 +1609,13 @@
      "metadata": {},
      "execution_count": 86
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "With that accomplished, we convert the data into a table."
    ],
    "metadata": {}
   },
@@ -1926,6 +1942,13 @@
      "metadata": {},
      "execution_count": 87
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "With the table completed, we are now ready to perform Chi-Square Test."
    ],
    "metadata": {}
   },
